tests/errors/known_bugs/PRIMITIVE_IMMUTABLE_RESTRICTION_IS_float.py
# pylint: disable=missing-function-docstring, missing-module-docstring
def compare_is_float(a : 'float', b : 'float'):
    return a is b
